# slam-dataset-format

./: .gitignore  CMakeLists.txt  Readme.md  main.cc
modules/common/: CMakeLists.txt
modules/common/include/sdf/: blob.h  bytes.h  cereal.h  plugin.h  sensor.h  serializable.h  transform.h
modules/common/include/sdf/sensor/: data.h  properties.h  props.h
modules/common/include/sdf/test/: helpers.h
modules/dataset/: CMakeLists.txt
modules/dataset/include/sdf/: dataset.h
modules/dataset/src/: dataset.cc
modules/dataset/test/: dataset_test.cc
modules/generator/: CMakeLists.txt
modules/generator/include/sdf/: generator.h
modules/generator/src/: generator.cc
modules/loader/: CMakeLists.txt
modules/loader/include/: loader.h
modules/loader/src/: loader.cc
modules/plugins/camera_pinhole_radtan/: CMakeLists.txt
modules/plugins/camera_pinhole_radtan/include/sdf/plugins/: camera_pinhole_radtan.h
modules/plugins/camera_pinhole_radtan/include/sdf/plugins/camera_pinhole_radtan/: data.h  props.h
modules/plugins/camera_pinhole_radtan/src/: camera_pinhole_radtan.cc
modules/plugins/camera_pinhole_radtan/test/: camera_pinhole_radtan_test.cc
modules/plugins/imu_6axis_allan/: CMakeLists.txt
modules/plugins/imu_6axis_allan/include/sdf/plugins/: imu_6axis_allan.h
modules/plugins/imu_6axis_allan/src/: imu_6axis_allan.cc
modules/plugins/imu_6dof_allan/: CMakeLists.txt
modules/plugins/imu_6dof_allan/include/sdf/plugins/: imu_6dof_allan.h
modules/plugins/imu_6dof_allan/include/sdf/plugins/imu_6dof_allan/: data.h  props.h
modules/plugins/imu_6dof_allan/src/: imu_6dof_allan.cc
modules/plugins/imu_6dof_allan/test/: imu_6dof_allan_test.cc
modules/plugins/pinhole_radtan_camera/include/sdf/plugins/: pinhole_radtan_camera.h
modules/plugins/pinhole_radtan_camera/src/: pinhole_radtan_camera.cc
modules/plugins/position_leica/: CMakeLists.txt
modules/plugins/position_leica/include/sdf/plugins/: position_leica.h
modules/plugins/position_leica/src/: position_leica.cc
modules/plugins/sensor_base/: CMakeLists.txt
modules/plugins/sensor_base/include/sdf/plugins/: sensor_base.h
modules/plugins/sensor_base/src/: sensor_base.cc
modules/plugins/sensor_base/test/: sensor_base_test.cc
modules/plugins/sensors/cameras/pinhole_radtan_camera/: CMakeLists.txt
modules/plugins/sensors/cameras/pinhole_radtan_camera/src/: pinhole_radtan_camera.cc
modules/sdf/: CMakeLists.txt
modules/sdf/include/sdf/: header.h  sdf.h
modules/sdf/include/sdf/sdf/: header.h  sdf.h  sensor.h
modules/sdf/src/: sdf.cc
modules/util/: CMakeLists.txt
modules/util/EuRoC_to_SDF/: CMakeLists.txt
modules/util/EuRoC_to_SDF/src/: EuRoC_to_SDF.cc
modules/util/sdf_info/: CMakeLists.txt
modules/util/sdf_info/src/: sdf_info.cc
modules/util/src/EuRoC_to_SDF/: EuRoC_to_SDF.cc
